objects/Set_of_Books__c.object
<CustomObject>
    <fields>
        <fullName>YTD_Earnings_Month_Updated__c</fullName>
        <label>YTD Earnings - Month Updated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YTD_Earnings__c</fullName>
        <label>YTD Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bk_team_Bookkeeper_Reviewer__c</fullName>
        <label>Bookkeeper Reviewer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bk_team_Bookkeeper__c</fullName>
        <description>Current Bookkeeper Name.</description>
        <label>Bookkeeper Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bk_team_Jr_Bookkeeper__c</fullName>
        <label>Jr Bookkeeper Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bk_team_bk_email__c</fullName>
        <label>Bookeeper Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>bk_team_bk_reviewer_email__c</fullName>
        <label>Bookeeper Reviewer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>bk_team_jr_bk_email__c</fullName>
        <label>Jr Bookkeeper Email</label>
        <type>Email</type>
    </fields>
    <label>Set of Books</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Bookkeeping_Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Return_Filed__c</columns>
        <columns>Extension_Filed__c</columns>
        <columns>Tax_Return_Type__c</columns>
        <columns>Completing_Books_for_Tax_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_2021_Q1</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Jan_Bookkeeping_Stages__c</columns>
        <columns>Jan_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Feb_Bookkeeping_Stages__c</columns>
        <columns>Feb_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Mar_Bookkeeping_Stages__c</columns>
        <columns>Mar_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Client_Wide_Comments__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Bookkeeping_Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2021</value>
        </filters>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Troy - Q1 2021</label>
        <sharedTo>
            <group>Bookkeeping_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manager_2019_Q1</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Jan_Bookkeeping_Stages__c</columns>
        <columns>Jan_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Feb_Bookkeeping_Stages__c</columns>
        <columns>Feb_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Mar_Bookkeeping_Stages__c</columns>
        <columns>Mar_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Client_Wide_Comments__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Bookkeeping_Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2019</value>
        </filters>
        <filters>
            <field>Am_I_Reviewer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Manager - 2019 - Q1</label>
        <language>en_US</language>
        <sharedTo>
            <group>Bookkeeping_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manager_2019_Q2</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Apr_Bookkeeping_Stages__c</columns>
        <columns>Apr_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>May_Bookkeeping_Stages__c</columns>
        <columns>May_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Jun_Bookkeeping_Stages__c</columns>
        <columns>Jun_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Bookkeeping_Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2019</value>
        </filters>
        <filters>
            <field>Am_I_Reviewer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Manager - 2019 - Q2</label>
        <language>en_US</language>
        <sharedTo>
            <group>Bookkeeping_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manager_2019_Q3</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Jul_Bookkeeping_Stages__c</columns>
        <columns>Jul_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Aug_Bookkeeping_Stages__c</columns>
        <columns>Aug_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Sep_Bookkeeping_Stages__c</columns>
        <columns>Sep_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Bookkeeping_Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2019</value>
        </filters>
        <filters>
            <field>Am_I_Reviewer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Manager - 2019 - Q3</label>
        <language>en_US</language>
        <sharedTo>
            <group>Bookkeeping_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manager_2019_Q4</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Oct_Bookkeeping_Stages__c</columns>
        <columns>Oct_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Nov_Bookkeeping_Stages__c</columns>
        <columns>Nov_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Dec_Bookkeeping_Stages__c</columns>
        <columns>Dec_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Bookkeeping_Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2019</value>
        </filters>
        <filters>
            <field>Is_my_record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Manager - 2019 - Q4</label>
        <language>en_US</language>
        <sharedTo>
            <group>Bookkeeping_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manager_2020_Q1</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Jan_Bookkeeping_Stages__c</columns>
        <columns>Jan_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Feb_Bookkeeping_Stages__c</columns>
        <columns>Feb_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Mar_Bookkeeping_Stages__c</columns>
        <columns>Mar_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Client_Wide_Comments__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Bookkeeping_Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2019</value>
        </filters>
        <filters>
            <field>Am_I_Reviewer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Manager - 2020 - Q1</label>
        <sharedTo>
            <group>Bookkeeping_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manager_2020_Q2</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Apr_Bookkeeping_Stages__c</columns>
        <columns>Apr_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>May_Bookkeeping_Stages__c</columns>
        <columns>May_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Jun_Bookkeeping_Stages__c</columns>
        <columns>Jun_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Bookkeeping_Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2020</value>
        </filters>
        <filters>
            <field>Am_I_Reviewer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Manager - 2020 - Q2</label>
        <sharedTo>
            <group>Bookkeeping_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manager_2020_Q3</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Jul_Bookkeeping_Stages__c</columns>
        <columns>Jul_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Aug_Bookkeeping_Stages__c</columns>
        <columns>Aug_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Sep_Bookkeeping_Stages__c</columns>
        <columns>Sep_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Bookkeeping_Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2020</value>
        </filters>
        <filters>
            <field>Am_I_Reviewer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Manager - 2020 - Q3</label>
        <sharedTo>
            <group>Bookkeeping_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manager_2020_Q4</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Oct_Bookkeeping_Stages__c</columns>
        <columns>Oct_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Nov_Bookkeeping_Stages__c</columns>
        <columns>Nov_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Dec_Bookkeeping_Stages__c</columns>
        <columns>Dec_Draft_Financial_Sent_to_Client_On__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Bookkeeping_Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2020</value>
        </filters>
        <filters>
            <field>Is_my_record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Manager - 2020 - Q4</label>
        <sharedTo>
            <group>Bookkeeping_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_Set_of_Books</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rollover_2020</fullName>
        <columns>NAME</columns>
        <columns>Primary_Entities__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Rollover__c</columns>
        <columns>Bookkeeper__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2019</value>
        </filters>
        <label>Rollover 2020</label>
        <sharedTo>
            <group>Bookkeeping</group>
            <group>Bookkeeping_Managers</group>
            <group>Job_Role_Bookkeeping</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rollover_2021</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Case__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Rollover__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2020</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Rollover 2021</label>
        <sharedTo>
            <group>Bookkeeping</group>
            <group>Bookkeeping_Managers</group>
            <group>Job_Role_Bookkeeping</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rollover_2021_Cleanup_Catchup</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Case__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Rollover__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2020</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Set_of_Books__c.Cleanup_Catchup</value>
        </filters>
        <label>Rollover 2021 - Cleanup/Catchup</label>
    </listViews>
    <listViews>
        <fullName>Rollover_2021_Master</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Case__c</columns>
        <columns>Bookkeeper__c</columns>
        <columns>Rollover__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2020</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Set_of_Books__c.Master</value>
        </filters>
        <label>Rollover 2021 - Master</label>
    </listViews>
    <nameField>
        <label>Set of Books Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Set of Books</pluralLabel>
    <recordTypes>
        <fullName>Cleanup_Catchup</fullName>
        <active>true</active>
        <label>Cleanup/Catchup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Apr_Bookkeeping_Comment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Apr_Bookkeeping_Stages__c,&quot;Waiting on Client&quot;), 
ISPICKVAL(Apr_Bookkeeping_Stages__c, &quot;Missing Information&quot;)),
ISBLANK(Apr_Bookkeeping_Comments__c))</errorConditionFormula>
        <errorMessage>In order to save this record, you must complete Apr Bookkeeping Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Aug_Bookkeeping_Comment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Aug_Bookkeeping_Stages__c,&quot;Waiting on Client&quot;), 
ISPICKVAL(Aug_Bookkeeping_Stages__c, &quot;Missing Information&quot;)),
ISBLANK(Aug_Bookkeeping_Comments__c))</errorConditionFormula>
        <errorMessage>In order to save this record, you must complete Aug Bookkeeping Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dec_Bookkeeping_Comment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Dec_Bookkeeping_Stages__c,&quot;Waiting on Client&quot;), 
ISPICKVAL(Dec_Bookkeeping_Stages__c, &quot;Missing Information&quot;)),
ISBLANK(Dec_Bookkeeping_Comments__c))</errorConditionFormula>
        <errorMessage>In order to save this record, you must complete Dec Bookkeeping Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Feb_Bookkeeping_Comment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Feb_Bookkeeping_Stages__c,&quot;Waiting on Client&quot;), 
ISPICKVAL(Feb_Bookkeeping_Stages__c, &quot;Missing Information&quot;)),
ISBLANK(Feb_Bookkeeping_Comments__c))</errorConditionFormula>
        <errorMessage>In order to save this record, you must complete Feb Bookkeeping Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Jan_Bookkeeping_Comments_Val</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Jan_Bookkeeping_Stages__c,&quot;Waiting on Client&quot;), 
ISPICKVAL(Jan_Bookkeeping_Stages__c, &quot;Missing Information&quot;)),
ISBLANK(Jan_Bookkeeping_Comments__c))</errorConditionFormula>
        <errorMessage>In order to save this record, you must complete Jan Bookkeeping Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Jul_Bookkeeping_Comment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Jul_Bookkeeping_Stages__c,&quot;Waiting on Client&quot;), 
ISPICKVAL(Jul_Bookkeeping_Stages__c, &quot;Missing Information&quot;)),
ISBLANK(Jul_Bookkeeping_Comments__c))</errorConditionFormula>
        <errorMessage>In order to save this record, you must complete Jul Bookkeeping Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Jun_Bookkeeping_Comment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Jun_Bookkeeping_Stages__c,&quot;Waiting on Client&quot;), 
ISPICKVAL(Jun_Bookkeeping_Stages__c, &quot;Missing Information&quot;)),
ISBLANK(Jun_Bookkeeping_Comments__c))</errorConditionFormula>
        <errorMessage>In order to save this record, you must complete Jun Bookkeeping Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mar_Bookkeeping_Comment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Mar_Bookkeeping_Stages__c,&quot;Waiting on Client&quot;), 
ISPICKVAL(Mar_Bookkeeping_Stages__c, &quot;Missing Information&quot;)),
ISBLANK(Mar_Bookkeeping_Comments__c))</errorConditionFormula>
        <errorMessage>In order to save this record, you must complete Mar Bookkeeping Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>May_Bookkeeping_Comment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(May_Bookkeeping_Stages__c,&quot;Waiting on Client&quot;), 
ISPICKVAL(May_Bookkeeping_Stages__c, &quot;Missing Information&quot;)),
ISBLANK(May_Bookkeeping_Comments__c))</errorConditionFormula>
        <errorMessage>In order to save this record, you must complete May Bookkeeping Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nov_Bookkeeping_Comment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Nov_Bookkeeping_Stages__c,&quot;Waiting on Client&quot;), 
ISPICKVAL(Nov_Bookkeeping_Stages__c, &quot;Missing Information&quot;)),
ISBLANK(Nov_Bookkeeping_Comments__c))</errorConditionFormula>
        <errorMessage>In order to save this record, you must complete Nov Bookkeeping Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Oct_Bookkeeping_Comment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Oct_Bookkeeping_Stages__c,&quot;Waiting on Client&quot;), 
ISPICKVAL(Oct_Bookkeeping_Stages__c, &quot;Missing Information&quot;)),
ISBLANK(Oct_Bookkeeping_Comments__c))</errorConditionFormula>
        <errorMessage>In order to save this record, you must complete Oct Bookkeeping Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_supervisors_can_change_owner</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(  OwnerId ),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;CEO &amp; Partners&quot;,
$Profile.Name &lt;&gt; &quot;Jr. Admins&quot;,
$User.Id &lt;&gt; &quot;0056f00000AZg3D&quot;,
$User.Id &lt;&gt; &quot;0050B000006ovgj&quot;,
$User.Id &lt;&gt; &quot;0056f00000AH288&quot;,
$User.Id &lt;&gt; &quot;0056f00000AH28S&quot;,
$User.Id &lt;&gt; &quot;0056f00000AH27j&quot;,
$User.Id &lt;&gt; &quot;0056f00000AH27t&quot;,
$User.Id &lt;&gt; &quot;0056f00000AH27b&quot;,
$User.Id &lt;&gt; &quot;0056f00000AH28h&quot;,
$User.Id &lt;&gt; &quot;0056f00000AH27G&quot;,
$User.Id &lt;&gt;&quot;0056f00000AH26c&quot;,
$User.Id &lt;&gt;&quot;0056f00000AH28D&quot;,
$User.Id &lt;&gt; &quot;0056f00000AH29L&quot;
 )</errorConditionFormula>
        <errorMessage>Please ask a manager to change the owner of this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rollover_without_Primary_entity</fullName>
        <active>false</active>
        <errorConditionFormula>IF( (Primary_Entities__c &lt;1 &amp;&amp; ISCHANGED( Rollover__c ) &amp;&amp; Rollover__c ==True),True,False )</errorConditionFormula>
        <errorMessage>Please select the Primary entity Before you do the Rollover.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sep_Bookkeeping_Comment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Sep_Bookkeeping_Stages__c,&quot;Waiting on Client&quot;), 
ISPICKVAL(Sep_Bookkeeping_Stages__c, &quot;Missing Information&quot;)),
ISBLANK(Sep_Bookkeeping_Comments__c))</errorConditionFormula>
        <errorMessage>In order to save this record, you must complete Sep Bookkeeping Comments.</errorMessage>
    </validationRules>
</CustomObject>